// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingScreen when just made not visible 1`] = `
<div>
  <div
    class="kogito-tooling--loading-screen"
    data-testid="loading-screen-div"
    style="opacity: 0; transition: opacity 400ms;"
  >
    <div
      class="pf-c-page"
      tabindex="-1"
    >
      <main
        class="pf-c-page__main"
        tabindex="-1"
      >
        <div
          class="pf-l-bullseye"
        >
          <div>
            <div>
              <span
                aria-valuetext="Loading..."
                class="pf-c-spinner pf-m-xl"
                role="progressbar"
              >
                <span
                  class="pf-c-spinner__clipper"
                />
                <span
                  class="pf-c-spinner__lead-ball"
                />
                <span
                  class="pf-c-spinner__tail-ball"
                />
              </span>
            </div>
            <h5
              class="pf-c-title pf-m-md"
            >
              Loading...
            </h5>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`LoadingScreen when not visible after fadeout delay 1`] = `<div />`;

exports[`LoadingScreen when visible 1`] = `
<div>
  <div
    class="kogito-tooling--loading-screen"
    data-testid="loading-screen-div"
    style="opacity: 1;"
  >
    <div
      class="pf-c-page"
      tabindex="-1"
    >
      <main
        class="pf-c-page__main"
        tabindex="-1"
      >
        <div
          class="pf-l-bullseye"
        >
          <div>
            <div>
              <span
                aria-valuetext="Loading..."
                class="pf-c-spinner pf-m-xl"
                role="progressbar"
              >
                <span
                  class="pf-c-spinner__clipper"
                />
                <span
                  class="pf-c-spinner__lead-ball"
                />
                <span
                  class="pf-c-spinner__tail-ball"
                />
              </span>
            </div>
            <h5
              class="pf-c-title pf-m-md"
            >
              Loading...
            </h5>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
